# thingspeoplesay

./: .gitignore  Cargo.toml  LICENSE  infrastructure.tf  terraform.tfstate  terraform.tfstate.backup
migrations/2018-09-04-203142_create_messages/: up.sql
migrations/2018-09-04-203821_create_colors/: down.sql  up.sql
migrations/2018-09-04-204153_create_gradients/: down.sql  up.sql
migrations/2018-09-04-220715_create_index_on_colors_for_hexcode/: down.sql  up.sql
migrations/2018-09-05-035639_create_foreign_key_indexes_on_gradients/: down.sql  up.sql
migrations/2018-09-10-222359_add_created_at_to_messages/: down.sql  up.sql
src/: main.rs
src/lib/: colors.rs  mod.rs  schema.rs
src/lib/app/: mod.rs  socket.rs
src/lib/app/handlers/: mod.rs  speech.rs
src/lib/orm/: db_exec.rs  db_messages.rs  mod.rs  models.rs
