[package]
name = "thingspeoplesay"
version = "0.1.0"
authors = ["Serra Allgood <serra.allgood@gmail.com>"]

[dependencies]
actix = "0.7"
actix-web = { version = "0.7", features = ["alpn"] }
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.13"
env_logger = "0.5"
futures = "0.1"
openssl = "0.10"
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
